--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  image_picker: ^0.8.7+3
+  file_picker: ^5.3.0
+
 
 flutter:
   uses-material-design: true
