--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  google_fonts: ^6.0.0
   image_picker: ^0.8.7+3
   file_picker: ^5.3.0
-
 
 flutter:
   uses-material-design: true
@@ -32,4 +32,10 @@ flutter:
     - lib/assets/kahvefali.png 
     - lib/assets/tarot.png
     - lib/assets/hand.png 
-    - lib/assets/dharita.png # Burada logonuzun doğru yolunu eklediğinizden emin olun.
+    - lib/assets/dharita.png
+    - lib/assets/fonts/PlaywriteGBS-Italic.ttf # Font dosyasını ekleyin
+
+  fonts:
+    - family: PlaywriteGBS
+      fonts:
+        - asset: lib/assets/fonts/PlaywriteGBS-Italic.ttf # Font ailesini tanımlayın
