puan ve coin part2

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ flutter:
     - lib/assets/dharita.png
     - lib/assets/fonts/PlaywriteGBS-Italic.ttf # Font dosyasını ekleyin
     - lib/assets/background.png 
+    - lib/assets/tarot_karti.jpg 
 
   fonts:
     - family: PlaywriteGBS
