--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   shared_preferences: ^2.3.2
   intl: ^0.18.0
+  url_launcher: ^6.3.1
+  social_share: ^2.3.1
+  screenshot: ^3.0.0
 
 dev_dependencies:
   flutter_test:
