--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,10 @@ dependencies:
   shared_preferences: ^2.3.2
   intl: ^0.18.0
   url_launcher: ^6.3.1
-  social_share: ^2.3.1
   screenshot: ^3.0.0
+  share_plus: ^10.1.2
+
+
 
 dev_dependencies:
   flutter_test:
