--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,3 +42,10 @@ android {
 flutter {
     source = "../.."
 }
+
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.1.1'
+    }
+}
+
