--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,13 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   shared_preferences: ^2.3.2
   intl: ^0.18.0
-  url_launcher: ^6.3.1
+
   screenshot: ^3.0.0
   share_plus: ^10.1.2
   google_mobile_ads: ^2.0.0
+  google_sign_in: ^6.2.2
+  firebase_auth: ^4.4.1
+  firebase_core: ^2.32.0
 
 
 
