--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,9 +2,9 @@
 buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:8.1.2'
-        classpath 'com.google.gms:google-services:4.3.15
+        classpath 'com.google.gms:google-services:4.3.15'
         // Import the Firebase BoM
-    implementation(platform("com.google.firebase:firebase-bom:33.7.0"))
+
 
 
   // TODO: Add the dependencies for Firebase products you want to use
